--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -2,11 +2,18 @@
 <html>
     <head>
         <title>BIG NASTY WEEKEND PRO-JECT</title>
-
+        <link href="./vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="./assets/styles/style.css" rel="stylesheet">
 
     </head>
     <body>
+        <div class="titleDiv">
+            <h1>gamma cohort</h1>
+        </div>
+        <div class="arrows">
+            <div class="oneway"></div>
+            <div class="otherway"></div>
+        </div>
         <div class="cohortDiv">
 
         </div>
