--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -2,13 +2,14 @@
 <html>
     <head>
         <title>BIG NASTY WEEKEND PRO-JECT</title>
+        <link href='http://fonts.googleapis.com/css?family=Trade+Winds' rel='stylesheet' type='text/css'>
         <link href="./vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="./assets/styles/style.css" rel="stylesheet">
 
     </head>
     <body>
         <div class="titleDiv">
-            <h1>gamma cohort</h1>
+            <h1>gamma cohort:</h1>
         </div>
         <div class="arrows">
             <div class="oneway"></div>
