fixed font link

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>BIG NASTY WEEKEND PRO-JECT</title>
-        <link href='http://fonts.googleapis.com/css?family=Trade+Winds' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Trade+Winds' rel='stylesheet' type='text/css'>
         <link href="./vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="./assets/styles/style.css" rel="stylesheet">
 
