New final commit changed a bit of styling added notes

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -8,18 +8,17 @@
 
     </head>
     <body>
-        <div class="titleDiv">
-            <h1>gamma cohort:</h1>
+        <div class="container-fluid">
+            <div class="titleDiv">
+                <h1>gamma cohort:</h1>
+            </div>
+            <div class="arrows">
+                <div class="oneway"></div>
+                <div class="otherway"></div>
+            </div>
+            <div class="cohortDiv">
+            </div>
         </div>
-        <div class="arrows">
-            <div class="oneway"></div>
-            <div class="otherway"></div>
-        </div>
-        <div class="cohortDiv">
-
-        </div>
-
-
     <script type="text/javascript" src="/vendors/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="/assets/scripts/app.min.js"></script>
     </body>
