--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -1,5 +1,6 @@
 body {
     background-image: url(../images/mainbackground.jpg);
+
 }
 
 .titleDiv {
@@ -19,13 +20,13 @@ h1 {
 
 .arrows {
     position: relative;
-    margin-left: 265px;
+    margin: 60px 0 0 50px;
 }
 
 .cohortDiv {
     position: relative;
     width:800px;
-    margin: 220px 0 0 150px;
+    margin: 220px 0 0 60px;
 
 }
 
@@ -44,7 +45,7 @@ h2, p {
 
 .oneway, .otherway {
     display: inline-block;
-    align-items: center;
+    /*align-items: center;*/
 }
 
 .oneway {
