--- a/server/public/assets/styles/style.css
+++ b/server/public/assets/styles/style.css
@@ -19,13 +19,13 @@ h1 {
 
 .arrows {
     position: relative;
-    margin-left: 265px;
+    margin: 60px 0 0 50px;
 }
 
 .cohortDiv {
     position: relative;
     width:800px;
-    margin: 220px 0 0 150px;
+    margin: 220px 0 0 60px;
 
 }
 
@@ -44,7 +44,7 @@ h2, p {
 
 .oneway, .otherway {
     display: inline-block;
-    align-items: center;
+    /*align-items: center;*/
 }
 
 .oneway {
