--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Gamma Carousel</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Trade+Winds' rel='stylesheet' type='text/css'>
     <link href="./vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="./assets/styles/style.css" rel="stylesheet">
