--- a/server/public/assets/styles/style.css
+++ b/server/public/assets/styles/style.css
@@ -1,7 +1,9 @@
 body {
-    background-image: url(../images/mainbackground.jpg);
+    background: url(../images/mainbackground.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
-    background-repeat: no-repeat;
 }
 
 .titleDiv {
