--- a/server/public/assets/styles/style.css
+++ b/server/public/assets/styles/style.css
@@ -1,9 +1,9 @@
 body {
     background: url(../images/mainbackground.jpg) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+    /*-webkit-background-size: cover;*/
+    /*-moz-background-size: cover;*/
+    /*-o-background-size: cover;*/
+    /*background-size: cover;*/
 }
 
 .titleDiv {
