--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -1,9 +1,5 @@
 body {
-    background: url(../images/mainbackground.jpg) no-repeat center center fixed;
-    /*-webkit-background-size: cover;*/
-    /*-moz-background-size: cover;*/
-    /*-o-background-size: cover;*/
-    /*background-size: cover;*/
+    background: url(../images/mainbackground.jpg);
 }
 
 .titleDiv {
@@ -30,7 +26,6 @@ h1 {
     position: relative;
     width:800px;
     margin: 220px 0 0 60px;
-    background-color: transparent;
 
 }
 
