--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -9,19 +9,21 @@
 
 </head>
 <body>
-<div class="container-fluid">
-    <div class="titleDiv">
-        <h1>gamma cohort:</h1>
+    <div class="backgroundDiv">
+        <div class="container-fluid">
+            <div class="titleDiv">
+                <h1>gamma cohort:</h1>
+            </div>
+            <div class="arrows">
+                <div class="oneway"></div>
+                <div class="otherway"></div>
+            </div>
+            <div class="cohortDiv container-fluid">
+            </div>
+        </div>
     </div>
-    <div class="arrows">
-        <div class="oneway"></div>
-        <div class="otherway"></div>
-    </div>
-    <div class="cohortDiv">
-    </div>
-</div>
-<script type="text/javascript" src="/vendors/jquery/dist/jquery.min.js"></script>
-<script type="text/javascript" src="/assets/scripts/app.min.js"></script>
+    <script type="text/javascript" src="/vendors/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="/assets/scripts/app.min.js"></script>
 </body>
 
 </html>
