--- a/server/public/assets/styles/style.css
+++ b/server/public/assets/styles/style.css
@@ -1,5 +1,5 @@
 body {
-    background: url(../images/mainbackground.jpg) no-repeat center center fixed;
+    background: url(../images/mainbackground.jpg) no-repeat center top fixed;
 }
 
 .titleDiv {
